// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoScanWebpackPlugin should generate auto scan with Webpack configuration 1`] = `
"import { lazy, ComponentType } from "react";

const ___TestDirectoryStructure_A_A1_ts = lazy(() => import("@@/TestDirectoryStructure/A/A1.ts"));
const ___TestDirectoryStructure_A_AA_AA1_ts = lazy(() => import("@@/TestDirectoryStructure/A/AA/AA1.ts"));
const ___TestDirectoryStructure_A_ts = lazy(() => import("@@/TestDirectoryStructure/A.ts"));

const components = [
   { name: "___TestDirectoryStructure_A_A1_ts", component: ___TestDirectoryStructure_A_A1_ts, relativePath: "/TestDirectoryStructure/A/A1.ts", metadata: null},
   { name: "___TestDirectoryStructure_A_AA_AA1_ts", component: ___TestDirectoryStructure_A_AA_AA1_ts, relativePath: "/TestDirectoryStructure/A/AA/AA1.ts", metadata: null},
   { name: "___TestDirectoryStructure_A_ts", component: ___TestDirectoryStructure_A_ts, relativePath: "/TestDirectoryStructure/A.ts", metadata: {"name":"zhangj","version":"0.0.1"}},
];

export default components;"
`;

exports[`AutoScanWebpackPlugin should generate auto scan with Webpack configuration 2`] = `
"import { lazy, ComponentType } from "react";
import ___TestDirectoryStructure_A_A1_ts_source from ".//TestDirectoryStructure/A/A1.ts.raw";
import ___TestDirectoryStructure_A_AA_AA1_ts_source from ".//TestDirectoryStructure/A/AA/AA1.ts.raw";
import ___TestDirectoryStructure_A_ts_source from ".//TestDirectoryStructure/A.ts.raw";

const ___TestDirectoryStructure_A_A1_ts = lazy(() => import("@@/TestDirectoryStructure/A/A1.ts"));
const ___TestDirectoryStructure_A_AA_AA1_ts = lazy(() => import("@@/TestDirectoryStructure/A/AA/AA1.ts"));
const ___TestDirectoryStructure_A_ts = lazy(() => import("@@/TestDirectoryStructure/A.ts"));

const components = [
   { name: "___TestDirectoryStructure_A_A1_ts", component: ___TestDirectoryStructure_A_A1_ts, relativePath: "/TestDirectoryStructure/A/A1.ts", source: ___TestDirectoryStructure_A_A1_ts_source, metadata: null},
   { name: "___TestDirectoryStructure_A_AA_AA1_ts", component: ___TestDirectoryStructure_A_AA_AA1_ts, relativePath: "/TestDirectoryStructure/A/AA/AA1.ts", source: ___TestDirectoryStructure_A_AA_AA1_ts_source, metadata: null},
   { name: "___TestDirectoryStructure_A_ts", component: ___TestDirectoryStructure_A_ts, relativePath: "/TestDirectoryStructure/A.ts", source: ___TestDirectoryStructure_A_ts_source, metadata: {"name":"zhangj","version":"0.0.1"}},
];

export default components;"
`;
